refactoring of Reporting Channels